--- a/eigth.html
+++ b/eigth.html
@@ -93,7 +93,7 @@ Cheers to you, bestie—let’s make it the best year yet. 🥂
 
 
     
-<blockquote>"Wishing you a year as amazing as you are! May all your dreams come true, and may each moment bring you joy and love." — A heartfelt message from [Friend/Family Member]</blockquote>
+<blockquote>"Wishing you a year as amazing as you are! May all your dreams come true, and may each moment bring you joy and love." — A heartfelt message from the one and only person who knows like 60% of you and better than potatoes</blockquote>
 
 <!--Part 2 ----------------------------------------------------------------------->
 
